# python-devcontainer-template

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_main.py
